fix: remove overflow slide

--- a/src/Slider/Slider.css
+++ b/src/Slider/Slider.css
@@ -1,5 +1,4 @@
 .slider {
-  overflow: hidden;
   position: relative;
 }
 
